--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DailyHoroscope",
+  "name": "daily_horoscope",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.7",
+    "@react-navigation/native-stack": "^7.1.8",
+    "axios": "^1.7.8",
+    "moment": "^2.30.1",
+    "path": "^0.12.7",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-circular-progress": "^1.4.1",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-screens": "^4.3.0",
+    "react-native-svg": "^15.9.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -22,7 +34,7 @@
     "@react-native-community/cli-platform-ios": "15.0.1",
     "@react-native/babel-preset": "0.76.3",
     "@react-native/eslint-config": "0.76.3",
-    "@react-native/metro-config": "0.76.3",
+    "@react-native/metro-config": "^0.76.3",
     "@react-native/typescript-config": "0.76.3",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
